[project]
name = "KlipperLH"
version = "0.0.1"
description = "Python Interface for controlling a Klipper based Liquid Handler"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Olly Bayley" }]
license = { text = "GPL-3.0" }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Defined in .config/RoboChem_env.yml
dependencies = []

[project.urls]
Repository = "https://github.com/ombayley/KlipperLH.git"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["KlipperLH*"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
cache_dir = ".config/pytest_cache"
