[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KlipperLH"
version = "0.1.0"
description = "Async Moonraker client and liquid-handling primitives for Klipper-based systems"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Olly Bayley" }]
license = { text = "GPL-3.0" }
dependencies = [
  "pydantic>=2",
  "pyyaml",
  "websockets>=12",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "pytest-asyncio",
  "ruff",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9",
  "pymdown-extensions",
]

[project.urls]
Repository = "https://github.com/ombayley/KlipperLH"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["config", "exceptions", "logging", "moonraker"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["devices*"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
cache_dir = ".pytest_cache"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "examples"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["websockets", "websockets.*", "yaml", "yaml.*"]
ignore_missing_imports = true
